# jedit

./: .gitignore  .travis.yml  README.md
data/: buffer_handling.py  clang.py  file_handling.py  init.py  keymap.py  minibuffer.py  misc.py  util.py
source/: CMakeLists.txt  main.cpp
source/src/: CMakeLists.txt  ScintillaCore.cpp  ScintillaCore.hpp  app.cpp  app.hpp  asiotest.cpp  buffer.cpp  buffer.hpp  editor.cpp  editor.hpp  gtk_gui.cpp  gtk_gui.hpp  gui_factory.hpp  jedit.cpp  key_handler.cpp  key_handler.hpp  main.cpp  minibuffer.cpp  minibuffer.hpp  script_engine.cpp  script_engine.hpp  util.hpp
source/src/backend/: backend.hpp
source/src/frontend/: frontend.hpp
source/src/gui/: gui.hpp  gui_factory.hpp
source/src/gui/gtk/: gtk_gui.cpp  gtk_gui.hpp
source/src/python/: buffer_module.cpp  editor_module.cpp  key_handler_module.cpp  minibuffer_module.cpp  python_modules.hpp
source/tools/valgrind/: jedit-valgrind.supp
